[project]
name = "fund-lens-api"
version = "0.1.12"
description = "FastAPI layer for FundLens campaign finance data"
authors = [
    {name = "Tom Boone", email = "tbc@tomboone.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "psycopg2-binary>=2.9.9",
    "slowapi>=0.1.9",
    "fund-lens-models @ git+https://github.com/fundlens/fund-lens-models.git@v0.1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.14.2"
mypy = "^1.18.2"
bandit = "^1.8.6"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
dev = "uvicorn fund_lens_api.main:app --reload --host 0.0.0.0 --port 8000"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]  # Ignore line-too-long errors

[tool.ruff.lint.isort]
known-first-party = ["fund_lens_api"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
